wip: add MBTilesDataSource
squashed:
- wip: async loading for MBTiles
- implement MBTiles offline fallback mode
- wip: support compressed MBTiles
  - testing with osm2vectortiles planet
  - try deflate by default
- support general MBTiles schema
  - check metadata compression option
  - differentiate caching and offline-fallback mode
  - only write to MBTiles if the db was created by tangram

--- a/scenes/scene.yaml
+++ b/scenes/scene.yaml
@@ -13,7 +13,8 @@ global:
 
 scene:
     background:
-        color: '#8db7d5'
+        #color: '#8db7d5'
+        color: '#efefef'
 cameras:
     iso-camera:
         # Manhattan
@@ -23,7 +24,8 @@ cameras:
         active: false
     perspective-camera:
         # Winters
-        position: [-121.97, 38.52, 12]
+        #position: [-121.97, 38.52, 12]
+        position: [-74.00976419448854, 40.70532700869127, 16]
         type: perspective
         fov: 45
         max_tilt: [[2, 0], [16, 90]]
@@ -60,6 +62,12 @@ styles:
     flatcolor:
         base: polygons
         lighting: false
+    blendlines:
+        base: lines
+        blend: overlay
+    blendpolygons:
+        base: polygons
+        blend: overlay
     heightglow:
         base: polygons
         lighting: vertex
@@ -79,12 +87,12 @@ styles:
 
 sources:
     osm:
-        type: GeoJSON
-        url:  https://vector.mapzen.com/osm/all/{z}/{x}/{y}.json
-        mbtiles: /Users/njh/osm-data/mbtiles/metatest11.mbtiles
+        type: MVT
+        #url:  https://vector.mapzen.com/osm/all/{z}/{x}/{y}.json
+        mbtiles: nyc.mbtiles
         max_zoom: 16
-        url_params:
-            api_key: vector-tiles-tyHL4AY
+        # url_params:
+        #     api_key: vector-tiles-tyHL4AY
 
 layers:
     touch:
@@ -120,14 +128,14 @@ layers:
                 color: '#f0ebeb'
     landuse:
         data: { source: osm }
-        filter:
-            name: true
-            any:
-                - { $zoom: { min: 9 }, area: { min: 10000000 } }
-                - { $zoom: { min: 10 }, area: { min: 3300000 } }
-                - { $zoom: { min: 12 }, area: { min: 1000000 } }
-                - { $zoom: { min: 13 }, area: { min: 10000 } }
-                - { $zoom: { min: 15 } }
+        # filter:
+        #     name: true
+        #     any:
+        #         - { $zoom: { min: 9 }, area: { min: 10000000 } }
+        #         - { $zoom: { min: 10 }, area: { min: 3300000 } }
+        #         - { $zoom: { min: 12 }, area: { min: 1000000 } }
+        #         - { $zoom: { min: 13 }, area: { min: 10000 } }
+        #         - { $zoom: { min: 15 } }
         draw:
             polygons:
                 order: 1
@@ -149,21 +157,31 @@ layers:
             draw:
                 polygons:
                     color: '#D9CFC3'
+    landuse_overlay:
+        data: { source: osm }
+        draw:
+            blendpolygons:
+                order: 2
+                color: '#4489ab84'
 
     water:
         data: { source: osm }
-        filter:
-            any:
-                # show smaller water areas at higher zooms
-                - { $zoom: { min: 0 }, area: { min: 10000000 } }
-                - { $zoom: { min: 10 }, area: { min: 1000000 } }
-                - { $zoom: { min: 12 }, area: { min: 100000 } }
-                - { $zoom: { min: 15 }, area: { min: 1000 } }
-                - { $zoom: { min: 18 } }
+        # filter:
+        #     any:
+        #         # show smaller water areas at higher zooms
+        #         - { $zoom: { min: 0 }, area: { min: 10000000 } }
+        #         - { $zoom: { min: 10 }, area: { min: 1000000 } }
+        #         - { $zoom: { min: 12 }, area: { min: 100000 } }
+        #         - { $zoom: { min: 15 }, area: { min: 1000 } }
+        #         - { $zoom: { min: 18 } }
         draw:
             flatcolor:
                 order: 3
                 color: '#8db7d5'
+            # blendlines:
+            #     order: 5
+            #     width: 1px
+            #     color: '#22ff00ff'
 
     roads:
         data: { source: osm }
